test/error/this_static.gw
class C
{
	function static void test() { this; }
}
